--- a/nonChangingElements.css
+++ b/nonChangingElements.css
@@ -1,3 +1,12 @@
+html {
+  font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
 /* Circle cursor */
 .circle {
 	position: absolute;
