--- a/home.css
+++ b/home.css
@@ -1,18 +1,19 @@
-h1 {
-  font-weight: 500;
-  font-size: 36pt;
-}
-
 * {
   box-sizing: border-box;
 }
-
-/* Two column */
 
 .row {
   border: 1px solid black;
 }
 
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* first section */
 .first-section .column {
   float: left;
   padding: 80px;
@@ -50,28 +51,154 @@ h1 {
   margin-bottom: 100px;
 }
 
-.left {
+.first-section .left {
   width: 60%;
 }
 
-.right {
+.first-section .right {
   width: 40%;
 }
+/* end of first section */
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
+/* third section */
 .third-section {
   height: 50vh;
 }
+/* end of third section */
 
-.fourth-section {
-  height: 240vh;
+/* second section */
+.second-section h1 {
+  text-align: center;
+  color: white;
+  margin: 0;
+  padding: 50px 0 40px 0;
 }
+
+.second-section .row {
+  padding: 5% 15% 5% 15%;
+  margin: 0;
+}
+
+.second-section .column {
+  color: white;
+  float: left;
+  width: 30%;
+  height: 50vh;
+  margin: 1.3%;
+  position: relative;
+  border: 1px solid black;
+  text-align: center;
+  padding: 1%;
+}
+/* end of second section */
+
+/* fourth section */
+.fourth-section {
+  height: 250vh;
+}
+
+.fourth-section .txt-container {
+  width: 500px;
+  max-width: 100%;
+}
+
+.fourth-section .row {
+  border: none;
+  padding-top: 1vh;
+}
+
+.fourth-section p {
+  font-size: .9em;
+  width: 350px;
+}
+
+/* first part */
+.first-part .column {
+  float: left;
+  padding: 80px;
+  padding-left: 15vw;
+}
+
+.first-part .left {
+  width: 60%;
+  height: 80vh;
+}
+
+.first-part .right {
+  width: 40%;
+  height: 80vh;
+  align-items: center;
+  padding: 0;
+}
+
+.first-part .right img {
+  height: 90%;
+  max-width: 100%;
+  display: flex;
+  align-self: center;
+  padding-top: 10%;
+}
+/* end of first part */
+
+/* second part */
+
+.second-part .column {
+  float: left;
+  padding: 80px;
+  padding-left: 15vw;
+}
+
+.second-part .left {
+  width: 40%;
+  height: 80vh;
+  align-items: center;
+  padding: 0;
+}
+
+.second-part .right {
+  width: 60%;
+  height: 80vh;
+}
+
+.second-part .left img {
+  height: 90%;
+  max-width: 100%;
+  display: flex;
+  align-self: center;
+  padding-top: 10%;
+  margin-left: 40%;
+}
+/* end of second part */
+
+/* third part */
+.third-part .column {
+  float: left;
+  padding: 80px;
+  padding-left: 15vw;
+}
+
+.third-part .left {
+  width: 60%;
+  height: 80vh;
+}
+
+.third-part .right {
+  width: 40%;
+  height: 80vh;
+  align-items: center;
+  padding: 0;
+}
+
+.third-part .right img {
+  height: 90%;
+  max-width: 100%;
+  display: flex;
+  align-self: center;
+  padding-top: 10%;
+}
+/* end of third part */
+
+/* end of fourth section */
 
 .fifth-section {
   height: 600px;
@@ -106,87 +233,3 @@ h1 {
 #goToTop:hover {
   background: white;
 }
-
-.second-section h1 {
-  text-align: center;
-  color: white;
-  margin: 0;
-  padding: 50px 0 40px 0;
-}
-
-.second-section .row {
-  padding: 5% 15% 5% 15%;
-  margin: 0;
-}
-
-.second-section .column {
-  color: white;
-  float: left;
-  width: 30%;
-  height: 50vh;
-  margin: 1.3%;
-  position: relative;
-  border: 1px solid black;
-  text-align: center;
-  padding: 1%;
-}
-
-/* fourth section */
-
-.fourth-section button {
-  
-}
-
-.first-part .column {
-  float: left;
-  padding: 80px;
-  padding-left: 15vw;
-}
-
-.first-part .left {
-  width: 60%;
-  height: 80vh;
-}
-
-.first-part .right {
-  width: 40%;
-  height: 80vh;
-  align-items: center;
-  padding: 0;
-}
-
-.first-part .right img {
-  height: 80%;
-  max-width: 100%;
-  display: flex;
-  align-self: center;
-  padding-top: 10%;
-}
-
-.second-part .column {
-  float: left;
-  padding: 80px;
-  padding-left: 15vw;
-}
-
-.second-part .left {
-  width: 60%;
-  height: 80vh;
-}
-
-.second-part .right {
-  width: 40%;
-  height: 80vh;
-  align-items: center;
-  padding: 0;
-}
-
-.second-part .right img {
-  height: 80%;
-  max-width: 100%;
-  display: flex;
-  align-self: center;
-  padding-top: 10%;
-}
-
-/* end of fourth section */
