--- a/home.css
+++ b/home.css
@@ -22,19 +22,22 @@
 
 .first-section .left {
   width: 60%;
-  height: 80vh;
+  height: 100%;
+}
+
+.first-section button {
+  margin-bottom: 5vh;
 }
 
 .first-section .right {
   width: 40%;
-  height: 80vh;
+  height: 100%;
   align-items: center;
   padding: 0;
 }
 
 .first-section .right img {
-  height: 80%;
-  max-width: 100%;
+  width: 70%;
   display: flex;
   align-self: center;
   padding-top: 10%;
@@ -67,34 +70,61 @@
 /* end of third section */
 
 /* second section */
+.second-section span {
+  font-weight: 600;
+}
+
+.second-section p {
+  text-align: justify;
+  margin-top: 20px;
+  font-weight: 300;
+  font-size: .9em;
+}
+
+.second-section img {
+  display: block;
+  margin: auto;
+}
+
 .second-section h1 {
   text-align: center;
   color: white;
   margin: 0;
-  padding: 50px 0 40px 0;
+  padding: 70px 0 40px 0;
+}
+
+.second-section button {
+  padding-left: 0;
+  padding-right: 0;
+  width: 40%;
+  bottom: 0;
+  left: 30%;
+  right: 30%;
+  position: absolute;
 }
 
 .second-section .row {
-  padding: 5% 15% 5% 15%;
+  padding: 0 15% 5% 15%;
   margin: 0;
+  border: none;
 }
 
 .second-section .column {
   color: white;
   float: left;
   width: 30%;
-  height: 50vh;
+  height: 55vh;
   margin: 1.3%;
   position: relative;
-  border: 1px solid black;
+  border: none;
   text-align: center;
-  padding: 1%;
+  padding: 2%;
 }
 /* end of second section */
 
 /* fourth section */
 .fourth-section {
-  height: 250vh;
+  height: 100%;
 }
 
 .fourth-section .txt-container {
@@ -104,7 +134,6 @@
 
 .fourth-section .row {
   border: none;
-  padding-top: 1vh;
 }
 
 .fourth-section p {
@@ -113,6 +142,10 @@
 }
 
 /* first part */
+.first-part h1 {
+  margin-top: 5vh;
+}
+
 .first-part .column {
   float: left;
   padding: 80px;
@@ -120,57 +153,64 @@
 }
 
 .first-part .left {
-  width: 60%;
-  height: 80vh;
+  width: 50%;
+  height: 100%;
 }
 
 .first-part .right {
-  width: 40%;
-  height: 80vh;
+  width: 50%;
+  height: 100%;
   align-items: center;
   padding: 0;
 }
 
 .first-part .right img {
-  height: 90%;
-  max-width: 100%;
+  width: 80%;
   display: flex;
   align-self: center;
   padding-top: 10%;
+  padding-bottom: 10%;
 }
 /* end of first part */
 
 /* second part */
+.second-part h1 {
+  margin: 0;
+}
 
 .second-part .column {
   float: left;
   padding: 80px;
-  padding-left: 15vw;
+  padding-left: 5vw;
 }
 
 .second-part .left {
-  width: 40%;
-  height: 80vh;
+  width: 50%;
+  height: 100%;
   align-items: center;
   padding: 0;
 }
 
 .second-part .right {
-  width: 60%;
-  height: 80vh;
+  width: 50%;
+  height: 100%;
 }
 
 .second-part .left img {
-  height: 90%;
-  max-width: 100%;
+  width: 80%;
   display: flex;
   align-self: center;
-  padding-top: 10%;
-  margin-left: 40%;
+  padding-top: 12%;
+  padding-bottom: 10%;
+  margin-left: 20%;
 }
 /* end of second part */
 
 /* third part */
+.third-part h1 {
+  margin: 0;
+}
+
 .third-part .column {
   float: left;
   padding: 80px;
@@ -178,23 +218,24 @@
 }
 
 .third-part .left {
-  width: 60%;
-  height: 80vh;
+  width: 50%;
+  height: 100%;
+  padding-bottom: 15vh;
 }
 
 .third-part .right {
-  width: 40%;
-  height: 80vh;
+  width: 50%;
+  height: 100%;
   align-items: center;
   padding: 0;
 }
 
 .third-part .right img {
-  height: 90%;
-  max-width: 100%;
+  width: 80%;
   display: flex;
   align-self: center;
-  padding-top: 10%;
+  padding-top: 12%;
+  padding-bottom: 10%;
 }
 /* end of third part */
 
