--- a/nonChangingElements.css
+++ b/nonChangingElements.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
   font-weight: 500;
-  font-size: 36pt;
+  font-size: 3em;
 }
 
 h2 {
@@ -22,6 +22,12 @@ h2 {
 h3 {
   font-weight: 400;
   font-size: 1.1em;
+}
+
+h4 {
+  font-size: 2.5em;
+  font-weight: 500;
+  margin: 0;
 }
 
 p {
@@ -127,7 +133,7 @@ hr {
 
 /* button */
 button {
-  padding: 15px 20px 15px 20px;
+  padding: 15px 25px 15px 25px;
   font-size: 12pt;
   border: 2px solid #407BFF;
   background: #407BFF;
