third section css

--- a/home.css
+++ b/home.css
@@ -138,6 +138,11 @@
 }
 /* end of second section */
 
+/* third section */
+
+
+/* end of third section */
+
 /* fourth section */
 .fourth-section {
   height: 100%;
