--- a/nonChangingElements.css
+++ b/nonChangingElements.css
@@ -93,7 +93,7 @@ hr {
 /* the navigation bar sign up button */
 .nav-text button {
   font-size: .9rem;
-  padding: 10px 20px 10px 20px;
+  padding: 1.5vh 2vh 1.5vh 2vh;
   border-radius: 1vh;
 }
 
@@ -132,7 +132,7 @@ hr {
 
 /* button */
 button {
-  padding: 15px 25px 15px 25px;
+  padding: 2vh 2.5vh 2vh 2.5vh;
   font-size: .9em;
   border: 2px solid #407BFF;
   background: #407BFF;
