--- a/home.css
+++ b/home.css
@@ -321,9 +321,51 @@
 
 /* end of fifth section */
 
+/* sixth section : want to learn more */
+
 .sixth-section {
-  height: 30vh;
+  height: 100%;
+  width: 100%;
+  border: none;
+  padding: 5% 12% 5% 12%;
+  display: flex; /*important*/
+  align-items: center; /*important*/
 }
+
+.sixth-section input[type=text], select {
+  width: 100%;
+  height: 7vh;
+  margin: 0;
+  margin-right: 2vh;
+  padding: 2vh 5vh;
+  display: inline-block;
+  border: 1px solid #407BFF;
+  border-radius: 1.5vh;
+  box-sizing: border-box;
+}
+
+.sixth-section .rightPart {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0;
+}
+
+.sixth-section h4 {
+  font-size: 1.7em;
+  width: 60%;
+  padding: 0;
+  margin: 0;
+}
+
+.sixth-section button {
+  height: 7vh;
+  padding: 1% 4% 1% 4%;
+}
+
+/* end of sixth section */
 
 /* seventh section : our team */
 .seventh-section {
