--- a/nonChangingElements.css
+++ b/nonChangingElements.css
@@ -91,6 +91,10 @@ hr {
   margin-right: 50px;
 }
 
+.nav-text li:hover {
+  cursor: pointer;
+}
+
 /* the navigation bar sign up button */
 .nav-text button {
   font-size: .9rem;
@@ -103,6 +107,10 @@ hr {
   height: 40px;
   margin: 10px;
   margin-left: 50px;
+}
+
+.nav-logo:hover {
+  cursor: pointer;
 }
 
 /* end of nav bar */
@@ -150,6 +158,7 @@ button:hover {
   background: white;
   color: #407BFF;
   transition-duration: .2s;
+  cursor: pointer;
 }
 
 .button2 {
