--- a/home.css
+++ b/home.css
@@ -323,6 +323,7 @@
 
 /* sixth section : want to learn more */
 
+/* #region */
 .sixth-section {
   height: 100%;
   width: 100%;
@@ -366,6 +367,7 @@
   padding: 1% 4% 1% 4%;
 }
 
+/* #endregion */
 /* end of sixth section */
 
 /* seventh section : our team */
