--- a/nonChangingElements.css
+++ b/nonChangingElements.css
@@ -1,5 +1,4 @@
 html {
-  font-family: 'Montserrat', sans-serif;
   cursor: url("wrench_grey.svg") 5 5, auto;
 }
 
@@ -8,6 +7,25 @@ body {
   padding: 0;
 }
 
+hr {
+  margin: 0 10% 0 10%;
+  border: none;
+  border-bottom: 2px solid rgba(96, 95, 109, 0.1);
+  outline: none;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* #region headings and paragraph */
 h1 {
   font-weight: 500;
   font-size: 3em;
@@ -34,15 +52,9 @@ p {
   padding: 0;
   margin: 0;
 }
+/* #endregion headings */
 
-hr {
-  margin: 0 10% 0 10%;
-  border: none;
-  border-bottom: 2px solid rgba(96, 95, 109, 0.1);
-  outline: none;
-}
-
-/* Circle cursor */
+/* #region Circle cursor */
 .circle {
 	position: absolute;
   border: solid 1px none;
@@ -55,10 +67,9 @@ hr {
   transition-property: background,transform, cursor;
   pointer-events: none; /* Click through */
 }
-/* end of circle cursor */
+/* #endregion of circle cursor */
 
-
-/* nav bar */
+/* #region nav bar */
 
 /* the whole navigation bar */
 .nav-bar {
@@ -113,10 +124,9 @@ hr {
   cursor: pointer;
 }
 
-/* end of nav bar */
+/* #endregion of nav bar */
 
-
-/* scrollbar */
+/* #region scrollbar */
 
 ::-webkit-scrollbar {
   width: 15px;
@@ -137,9 +147,9 @@ hr {
   background-color: #959595;
 }
 
-/* end of scrollbar */
+/* #endregion of scrollbar */
 
-/* button */
+/* #region button */
 button {
   padding: 2vh 2.5vh 2vh 2.5vh;
   font-size: .9em;
@@ -184,4 +194,4 @@ button:hover {
   color: white;
 }
 
-/* end of button */
+/* #endregion of button */
